--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,20 @@
         display: flex;
         align-items: flex-start;
         }
+    #menu {
+        display: none;
     }
-@media (min-width:768) {
-
-}    
-    
+}
 @media (max-width:480px){
     nav {
-        display: none;        
+        display: none;       
     }
     h2 {
         line-height: 100%;
     }
     p {
         line-height: 120%;
-    }
+    }    
 }
 body {
     background-color: rgb(243, 243, 243);
@@ -29,6 +28,22 @@ header{ /* topbar */
     background-color: midnightblue;
     color: white;
     text-align: center    
+}
+#menu {
+    background-color: rgb(165, 165, 165);
+    border-top: orange solid 2px;
+}
+.hamburger {
+    width: 35px;
+    height: 4px;
+    background-color: midnightblue;
+    margin: 0px 10px;    
+}
+.line {
+    width: 35px;
+    height: 5px;
+    background-color: rgb(165, 165, 165);
+    margin: 0px 0;    
 }
 h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
