validation; onBlur; onFocus; bonus

--- a/css/suscription.css
+++ b/css/suscription.css
@@ -6,10 +6,10 @@
 }
 h2 {
     margin: 10px;
-    text-align: center;   
-    padding: 10px;  
-    text-transform: uppercase;
+    padding: 10px;
     color: midnightblue;
+    text-align: center;      
+    text-transform: uppercase;    
 }
 .form {
     padding: 10px;
@@ -18,29 +18,29 @@ h2 {
     display: flex;
     justify-content: center;    
 }
-.submit-btn {
-    display: flex;
-    justify-content: center;
+div.container {
+    padding-top: 15px;
+    padding-bottom: 40px;
 }
-input {
-   padding: 5px;
-   margin: 5px;
+input{
+    margin: 5px;
+    padding: 5px;   
 }
 label {
     display: inline-block;
     width: 120px;
     margin: 5px;
 }
-.submit {
-    color: white;
-    background-color: midnightblue;
-    border: none;
-    font-weight: bold;    
+#submit {
     margin: 30px;
     padding: 10px 20px;
+    background-color: midnightblue;
+    border: none;
+    color: white;    
+    font-weight: bold;    
     cursor: pointer;
 }
-div.container {
-    padding-top: 15px;
-    padding-bottom: 40px;
+.submit-btn {
+    display: flex;
+    justify-content: center;
 }
