test submit button

--- a/css/suscription.css
+++ b/css/suscription.css
@@ -31,7 +31,7 @@ label {
     width: 120px;
     margin: 5px;
 }
-#submit {
+#submitForm {
     margin: 30px;
     padding: 10px 20px;
     background-color: midnightblue;
